<resources>
    <string name="app_name">FitSync</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="login_prompt">Please login to your fitness account</string>
    <string name="latest_sync_at">Latest sync at %1$s</string>
    <string name="sync_message">This data will be sync\'d every 5–15 minutes</string>
    <string name="active_time_message">The time FitSync can run (max 720 minutes)</string>
    <string name="standard_min">60 min</string>
    <string name="extra_min">250 min \n Watch AD to add 250 minutes</string>
    <string name="speed">Speed</string>
    <string name="steps_min">steps/min</string>
    <string name="km_h">km/h</string>
    <string name="km">/km</string>
    <string name="behavior">Behavior</string>
    <string name="human">Human</string>
    <string name="stable">Stable</string>

    <plurals name="numberOfMinutes">
        <item quantity="one">Active time: %d minute remaining</item>
        <item quantity="other">Active time: %d minutes remaining</item>
    </plurals>
</resources>